--- a/css/style.css
+++ b/css/style.css
@@ -5,15 +5,26 @@
     --foreground-color: white;
     --shadow-color: #d7d7d7;
     --text-color: black;
+
+    --font: Arial, Helvetica, sans-serif;
+
+    --highlight-color: rgb(49, 138, 255);
 }
 
 body {
     margin: 0;
     padding: 0;
 
+    font-family: var(--font);
+
     background-color: var(--background-color);
 }
 
 .stylized {
-        
+    padding: 0 2rem 0 2rem;
+    width: 20%;
+    margin: 200px auto 0 auto;
+    border-radius: 3px;
+    background-color: var(--foreground-color);
+    box-shadow: 0 0 10px 0 var(--shadow-color);
 }
